flux/apps/actual-budget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
spec:
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: docker.io/actualbudget/actual-server:latest
          ports:
            - name: http
              containerPort: 5006
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
