flux/apps/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  annotations:
    tailscale.com/hostname: actual-budget
spec:
  selector:
    app: actual-budget
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
